[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MyCrypto"
authors = [
    {name = "Josiah Carberry", email = "josiah_carberry@brown.edu"},
]
description = "My package description"
keywords = ["Crypto", "Pure Python", "Hash", "Cipher", "Stream Cipher", "RSA", "Block Cipher"]
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]
dynamic = ["version"]

[project.urls]
documentation = "https://readthedocs.org"
repository = "https://github.com/me/spam.git"

[project.optional-dependencies]

[project.scripts]
my-script = "my_package.module:function"